# ros_python_pkg_template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeLists.txt  package.xml  setup.py
