<?xml version="1.0"?>
<package>
  <name>{{cookiecutter.project_slug}}</name>
  <version>{{cookiecutter.version}}</version>
  <description>{{cookiecutter.project_short_description}}</description>

  <maintainer email="{{cookiecutter.email}}">{{cookiecutter.full_name}}</maintainer>
  <author email="{{cookiecutter.email}}">{{cookiecutter.full_name}}</author>
  <license>{{cookiecutter.open_source_license}}</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
